:lipstick: update_closet 추가

--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -61,7 +61,7 @@
                         <h6 class="flex-grow-2" id="weatherIcon"><i class="{{icon}} row justify-content-end" style="color: #868B94; font-size: 6rem;"></i></h6>
                     </div>
                     <div class="d-flex">
-                        <h6 id="TemperatureMaxMin" class="small flex-grow-1 hahmelt" style="color: #1C2331;">최고 {{minTmp}}º / 최저 {{maxTmp}}º</h6>
+                        <h6 id="TemperatureMaxMin" class="small flex-grow-1 hahmelt" style="color: #1C2331;">최고 {{maxTmp}}º / 최저 {{minTmp}}º</h6>
                         <h6 id="WeatherStatus" class="small hahmelt" style="color: #1C2331;">{{sky}}</h6>
                     </div>
                 </div>
