--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -124,8 +124,8 @@
                     <h4 class="text-light mb-4 jamsil">알림받기</h4>
                     <p class="hahmelt">새로운 기능이 업데이트되면 알려줍니다!</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <input class="form-contrfol bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="이메일을 입력하세요.">
+                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2 jamsil">구독</button>
                     </div>
                 </div>
             </div>
