--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -1,40 +1,49 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
+<link href="{% static 'css/style.css' %}" rel="stylesheet"/>
 {% block nav %}
     <a href="{% url 'index' %}" class="nav-item nav-link">Home</a>
     <a href="{% url 'about' %}" class="nav-item nav-link">About Us</a>
     <a href="{% url 'index' %}" class="nav-item nav-link">Try on</a>
-{% endblock %}
+{% endblock nav %}
 {% block closet %}
-    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Clothes</a>
+    <a href="#"
+       class="nav-link dropdown-toggle active"
+       data-bs-toggle="dropdown">Clothes</a>
+    <link href="{% static 'css/upload.css' %}" rel="stylesheet"/>
+    <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="{% static 'js/upload_closet.js' %}"></script>
 {% endblock closet %}
-
 {% block jsv %}
-
 {% endblock jsv %}
 {% block content %}
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header mb-5 wow fadeIn"
+         data-wow-delay="0.1s">
         <div class="container">
             <h1 class="display-3 mb-3 animated slideInDown">My closet</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb mb-0">
-                    <li class="breadcrumb-item"><a class="text-body" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-body" href="#">Pages</a></li>
+                    <li class="breadcrumb-item">
+                        <a class="text-body" href="#">Home</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        <a class="text-body" href="#">Pages</a>
+                    </li>
                     <li class="breadcrumb-item text-dark active" aria-current="page">My closet</li>
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Page Header End -->
-
-
     <!-- Product Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-0 gx-5 align-items-end">
                 <div class="col-lg-6">
-                    <div class="section-header text-start mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                    <div class="section-header text-start mb-5 wow fadeInUp"
+                         data-wow-delay="0.1s"
+                         style="max-width: 500px">
                         <h1 class="display-5 mb-3">My closet upload</h1>
                         <p>👚 옷을 등록해서 나만의 옷장을 만들어요.</p>
                     </div>
@@ -45,15 +54,20 @@
                     <div class="row g-4">
                         <div>
                             <div id="att_zone" data-placeholder="">
-                                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" ></div>
+                                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"></div>
                             </div>
                         </div>
                         <div>
-                            <form action="" method="POST" name="clothes_info" enctype="multipart/form-data">
+                            <form action=""
+                                  method="POST"
+                                  name="clothes_info"
+                                  id="clothes_info"
+                                  enctype="multipart/form-data"
+                                  onkeydown="return event.key != 'Enter';">
                                 {% csrf_token %}
                                 <div class="mb-3 row">
-                                    <label for="season" class="col-sm-2 col-form-label text-end">계절 </label>
-                                    <select name="season" size="1" class="form-select col">
+                                    <label for="season" class="col-sm-2 col-form-label text-end">계절</label>
+                                    <select name="season" id="season" size="1" class="form-select col">
                                         <option value="none" disabled selected>=== 계절 ===</option>
                                         <option value="s/f">봄/가을</option>
                                         <option value="summer">여름</option>
@@ -61,55 +75,80 @@
                                     </select>
                                 </div>
                                 <div class="mb-3 row">
-                                    <label for="type1" class="col-sm-2 col-form-label text-end">분류1 </label>
-                                    <select name="type1" size="1" class="form-select col">
+                                    <label for="type1" class="col-sm-2 col-form-label text-end">분류1</label>
+                                    <select name="type1" id="type1" size="1" class="form-select col" onchange="itemChange()">
                                         <option value="none" disabled selected>=== 분류1 ===</option>
                                         <option value="top">상의</option>
-                                        <option value="bottom">하의</option>
-                                        <option value="dress">드레스</option>
+                                        <option value="pants">바지</option>
+                                        <option value="skirt">치마</option>
+                                        <option value="dress">원피스</option>
                                         <option value="outer">아우터</option>
+                                        <option value="bag">가방</option>
                                         <option value="accessary">악세서리</option>
                                         <option value="shoes">신발</option>
                                     </select>
                                 </div>
-    
                                 <div class="mb-3 row">
-                                    <label for="type2" class="col-sm-2 col-form-label text-end">분류2 </label>
-                                    <select name="type2" size="1" class="form-select col">
+                                    <label for="type2" class="col-sm-2 col-form-label text-end">분류2</label>
+                                    <select name="type2" id="type2" size="1" class="form-select col">
                                         <option value="none" disabled selected>=== 분류2 ===</option>
-                                        <option value="top">상의</option>
-                                        <option value="bottom">하의</option>
-                                        <option value="dress">드레스</option>
-                                        <option value="outer">아우터</option>
-                                        <option value="accessary">악세서리</option>
-                                        <option value="shoes">신발</option>
                                     </select>
                                 </div>
-                                
                                 <div class="mb-3 row">
-                                    <label for="name" class="col-sm-2 col-form-label text-end">옷 이름 </label>
-                                    <input type="text" name="name" class="form-control col">
+                                    <label for="name" class="col-sm-2 col-form-label text-end">옷 이름</label>
+                                    <input type="text" name="name" id="name"class="form-control col" />
                                 </div>
-                                
                                 <div class="mb-3 row">
-                                    <label for="tag" class="col-sm-2 col-form-label text-end">태그 </label>
-                                    <input type="text" name="tag" class="form-control col">
+                                    <label for="tag" class="col-sm-2 col-form-label text-end">태그</label>
+                                    <input type="text" name="tag" id="tag" class="form-control col" 
+                                    onkeyup="if(window.event.keyCode==13){addtag()}" placeholder="#꾸안꾸 #출근룩 #가죽 #스웨이드 (특수문자🙅‍♀️)"/>
+                                    <button type="button" id="btn-addtag" class="btn-addtag col-sm-2" onclick="addtag()">추가</button>
                                 </div>
-                                
+                                <!--tag 추가해서 띄우는 label-->
                                 <div class="mb-3 row">
-                                    <label for="details" class="col-sm-2 col-form-label text-end">상세정보 </label>
-                                    <textarea name="details" class="form-control col" rows="5"></textarea>
+                                    <label class="col-sm-2 col-form-label text-end"></label>
+                                    <input type="text" name="tags" id="tags" class="form-control col" readonly/>
+                                </div>
+                                <div class="mb-3 row">
+                                    <label for="details" class="col-sm-2 col-form-label text-end">상세정보</label>
+                                    <textarea name="details" id="details" class="form-control col" rows="5"></textarea>
+                                </div>
+                                <div class="mb-3 row">
+                                    <label class="col-sm-2"></label>
+                                    <div class="file-upload col">
+                                        <button class="file-upload-btn" type="button"
+                                                onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
+                                        <div class="image-upload-wrap">
+                                            <input class="file-upload-input" type='file'
+                                                   onchange="readURL(this);"
+                                                   name="imgfile" id="imgfile" multiple="multiple"/>
+                                            <div class="drag-text">
+                                                <h3>Drag and drop a file or select add Image</h3>
+                                            </div>
+                                        </div>
+                                        <div class="file-upload-content">
+                                            <img class="file-upload-image" src="#" alt="your image" />
+                                            <div class="image-title-wrap">
+                                                <button type="button" onclick="removeUpload()" class="remove-image">
+                                                    Remove <span class="image-title">Uploaded Image</span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="input-group mb-3">
-                                    <label for="imgfile" class="col-sm-2 col-form-label text-end">이미지 첨부 </label>
-                                    <input type="file" id="btnAtt" class="form-control" multiple="multiple" name="imgfile"/>
+                                <!-- button design -->
+                                <div class="btn-container" name="btn-container">
+                                    <button id="btn-submit" class="btn-submit" type="sumbit" onkeyup="if(window.event.keyCode==13){}">
+                                        <p id="btnText">Submit</p>
+                                        <div class="check-box">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                                                <path fill="transparent" d="M14.1 27.2l7.1 7.2 16.7-16.8" />
+                                            </svg>
+                                        </div>
+                                    </button>
                                 </div>
-                                                       
-                                
-                                <p><input type="submit" id="chk_submit" value="Submit" multiple="multiple"></p>
-
-                              </form>
+                            </form>
                         </div>
                         
                     </div>
@@ -117,5 +156,6 @@
             </div>
         </div>
     </div>
-    <!-- Product End -->
-{% endblock  %}
+
+<!-- Product End -->
+{% endblock content %}
