--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -64,7 +64,7 @@
                         {% endblock closet %}
                         
                         <div class="dropdown-menu m-0">
-                            <a href="{% url 'product' %}" class="dropdown-item jamsil">My closet</a>
+                            <a href="{% url 'view_closet' %}" class="dropdown-item jamsil">My closet</a>
                             <a href="{% url 'blog' %}" class="dropdown-item jamsil">Codi book</a>
                             <a href="{% url 'upload_closet' %}" class="dropdown-item">(Test)Upload</a>
                         </div>
