--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -433,6 +433,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="btn-container" name="btn-container">
+                    <button class="btn-submit" type="button" onclick = "location.href = '{% url 'upload_closet' %}' " onkeyup="if(window.event.keyCode==13){}">
+                        <p id="btnText">Upload</p>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
