--- a/static/css/style.css
+++ b/static/css/style.css
@@ -321,7 +321,7 @@ button.close {
 .page-header {
     padding-top: 12rem;
     padding-bottom: 6rem;
-    background: url(../img/carousel-1.jpg) top right no-repeat;
+    background: url(../img/carousel-5-1.jpg) top right no-repeat;
     background-size: cover;
 }
 
