--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -19,7 +19,8 @@
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://kit.fontawesome.com/acf5847467.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" crossorigin="anonymous">
+    {% comment %} <link rel="stylesheet" href="https://kit.fontawesome.com/acf5847467.css" crossorigin="anonymous"> {% endcomment %}
     
 
     <!-- Libraries Stylesheet -->
@@ -29,11 +30,13 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'assets/css/login-register.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/upload.css' %}" rel="stylesheet"/>
 
     <!-- Template Stylesheet -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/upload.css' %}" rel="stylesheet">
+
+    {% block style %}
+                       
+    {% endblock style %}
 </head>
 
 <body>
@@ -59,7 +62,7 @@
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     {% block nav %}
                        
-                    {% endblock %}
+                    {% endblock nav %}
                     {% if user.is_authenticated %}
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle jamsil" data-bs-toggle="dropdown">Clothes</a>             
@@ -178,7 +181,7 @@
     <!-- Navbar End -->
     {% block content %}
 
-    {% endblock %}
+    {% endblock content %}
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-0 pt-3 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
@@ -254,10 +257,9 @@
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'assets/js/login-register.js' %}" type="text/javascript"></script>
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script defer src="{% static 'js/upload_closet.js' %}"></script>
     {% block jsv %}
 
-    {% endblock %}
+    {% endblock jsv%}
 </body>
 
 </html>
