--- a/muapp/templates/about.html
+++ b/muapp/templates/about.html
@@ -8,20 +8,17 @@
 
 {% block content %}
 
-
+<div class="container-xxl py-5">
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
-            <h1 class="display-3 mb-3 animated slideInDown jamsil">소개</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb mb-0">
-                    <li class="breadcrumb-item"><a class="text-body" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-body" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-dark active" aria-current="page">About Us</li>
-                </ol>
-            </nav>
+        <div class="col-lg-6">
+            <div class="section-header text-start mb-5 wow fadeInUp" style="bottom: 50px;top: 100px;" data-wow-delay="0.1s">
+                <h1 class="display-5 mb-3 jamsil" style="font-size: 4vw">졸업작품 소개</h1>
         </div>
     </div>
+    </div>
+</div>
+
     <!-- Page Header End -->
 
 
@@ -36,11 +33,11 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="display-5 mb-4 jamsil">Clothify에 대하여</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a>
+                    <p class="mb-4 jamsil">옷을 손쉽게 관리한다는 뜻으로, "Cloth"와 "Simplify"의 합성어입니다.</p>
+                    <p class="jamsil"><i class="fa fa-check text-primary me-3"></i>가상피팅</p>
+                    <p class="jamsil"><i class="fa fa-check text-primary me-3"></i>옷장관리</p>
+                    <p class="jamsil"><i class="fa fa-check text-primary me-3"></i>코디추천</p>
+                    {% comment %} <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> {% endcomment %}
                 </div>
             </div>
         </div>
@@ -55,8 +52,8 @@
     <div class="container-fluid bg-light bg-icon py-6">
         <div class="container">
             <div class="section-header text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-5 mb-3">Our Profile</h1>
-                <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                <h1 class="display-5 mb-3 jamsil">조원 프로필</h1>
+                <p class="jamsil">9조 조원의 소개입니다.</p>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -88,9 +85,9 @@
                             <p></p>
                         </div>
 
-                        <div class="text-center">
+                        {% comment %} <div class="text-center">
                             <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                     
                 </div>
@@ -123,9 +120,9 @@
                             <p></p>
                         </div>
 
-                        <div class="text-center">
+                        {% comment %} <div class="text-center">
                             <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -157,9 +154,9 @@
                             <p></p>
                         </div>
 
-                        <div class="text-center">
+                        {% comment %} <div class="text-center">
                             <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                 </div>
             </div>
