--- a/muapp/templates/blog.html
+++ b/muapp/templates/blog.html
@@ -10,16 +10,14 @@
 {% endblock closet %}
 {% block content %}
     <!-- Page Header Start -->
-    <div class="container-fluid page-header wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-xxl py-5">
+        <!-- Page Header Start -->
         <div class="container">
-            <h1 class="display-3 mb-3 animated slideInDown">Blog Grid</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb mb-0">
-                    <li class="breadcrumb-item"><a class="text-body" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-body" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-dark active" aria-current="page">Blog Grid</li>
-                </ol> 
-            </nav>
+            <div class="col-lg-6">
+                <div class="section-header text-start mb-5 wow fadeInUp" style="bottom: 50px;top: 100px;" data-wow-delay="0.1s">
+                    <h1 class="display-5 mb-3 jamsil" style="font-size: 4vw">코디 추천</h1>
+                 </div>
+            </div>
         </div>
     </div>
     <!-- Page Header End -->
@@ -27,7 +25,7 @@
 
     <!-- Blog Start -->
     <div class="container-xxl py-6">
-        <div class="container">
+        <div class="container jamsil">
             <div class="section-header text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <h1 class="display-5 mb-3">Latest Blog</h1>
                 <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
