--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -107,7 +107,7 @@
                                 <!-- Uppy Dashboard -->
                                 <div class="mb-3 row">
                                     <label class="col-sm-2"></label>
-                                    <div class="file-upload-content"></div>
+                                    <div class="fileUploadContent col"></div>
                                 </div>
 
                                 <!-- button design -->
@@ -137,6 +137,7 @@
 <script defer src="https://releases.transloadit.com/uppy/v3.6.1/uppy.min.js"></script>
 <script type="module">
     // import {Uppy, Dashboard, DropTarget, Compressor, XHRUpload, ImageEditor} from "https://releases.transloadit.com/uppy/v3.6.1/uppy.min.mjs"
+    console.log("test")
 
     const COMPANION_URL = "http://companion.uppy.io"
     const COMPANION_ALLOWED_HOSTS = ['https://my-site.com']
@@ -146,9 +147,10 @@
         // The main UI that shows files, progress and holds all plugins
         .use(Uppy.Dashboard, {
             id: 'Dashboard',
-            target: '.file-upload-content',
+            target: '.fileUploadContent',
             inline: true,
-            height: 470,
+            height: 800,
+            width: 1000,
             metaFields: [
                 { id: 'name', name: 'Name', placeholder: 'file name' },
                 { id: 'caption', name: 'Caption', placeholder: 'add description' },
@@ -157,14 +159,14 @@
             produlyDisplayPoweredByUppy:false,
             //autoOpenFileEditor: true,
         })
-        {% comment %} .use(Uppy.Form, { 
+        .use(Uppy.Form, { 
                         id : 'imgFile',
                         target: '#clothes_info',
                         getMetaFromForm: true,
                         addResultToForm: true,
                         resultName: 'imgFile',
                         triggerUploadOnSubmit: false,
-                        submitOnSuccess: false}) {% endcomment %}
+                        submitOnSuccess: false})
         
         // Allow dropping files on any element or the whole document
         .use(Uppy.DropTarget, { target: document.body })
@@ -172,20 +174,20 @@
         .use(Uppy.Compressor)
         // Upload
         //.use(Uppy.Tus, { endpoint: 'https://tusd.tusdemo.net/files/' })
-        {% comment %} .use(Uppy.XHRUpload,{
+        .use(Uppy.XHRUpload,{
             endpoint: '{% url 'upload_file' %}',
             headers: {'X-CSRFToken':"{{csrf_token}}"},
             formData: true,
             fileData: true,
             fieldName:'imgfile',
-        }) {% endcomment %}
+        })
 
         .use(Uppy.ImageEditor, { target: Uppy.Dashboard })    
 
 
 
         // All remote services like Instagram and Google Drive in one package
-        {% comment %} 
+        
         .use(Uppy.RemoteSources, {
             // You can manually specify `sources` here, by default all available are included. 
             // See docs: https://uppy.io/docs/remote-sources/#sources.
@@ -194,15 +196,14 @@
             sources: ['Instagram', 'GoogleDrive', 'Facebook', 'OneDrive', 'Url'],
         })
         .use(Uppy.Webcam, { target: Uppy.Dashboard })
-        .use(Uppy.Audio, { target: Uppy.Dashboard, showRecordingLength: true })
         .use(Uppy.ScreenCapture, { target: Uppy.Dashboard }) 
-        {% endcomment %}   
+         
         
         
         uppy.on('complete', result => {
             console.log('successful files:', result.successful)
             console.log('failed files:', result.failed)
         })
-        </script>
+</script>
 
 {% endblock jsv%}
